# zen-demos

./: .editorconfig  .gitignore  .gitmodules  README.md  fixed_math.py  requirements.txt  rotate.py  zen_demos.code-workspace
arch-feed/: README.md  pyproject.toml
arch-feed/arch_feed/: main.py
audez/: README.md  pyproject.toml
audez/tests/: test_arch_feed.py
larse/: .editorconfig  .gitignore  CMakeLists.txt  README.md  TODO.md  build_docker_dos.sh  build_dos.sh  run_build.sh  run_dos.sh  run_shell.sh  run_tests.sh
larse/docs/: merge.md
larse/src/: CMakeLists.txt
larse/src/core/: CMakeLists.txt
larse/src/core/src/: clone.c  expression.c  io.c  io.h  logging.c  merge.c  parse.c  parse_token.c  parse_token.h  repr.c
larse/src/shell/: CMakeLists.txt
larse/src/shell/src/: main.c
larse/tests/: CMakeLists.txt  main.c  test_support.h
larse/tests/data/: comment1.lsp  merge-head0.lsp  merge-head1.lsp  merge-head2.lsp  merge-skip0.lsp  merge-skip1.lsp  merge-skip2.lsp  merge0.lsp  merge1.lsp  merge2.lsp  test1.lsp
larse/tools/: Dockerfile.djgpp  djgpp.cmake  docker-entrypoint.sh  dosbox.conf
loitar/: .gitignore  CMakeLists.txt  README.md  run_build.sh  run_tests.sh
loitar/examples/: dotimes.lisp  factorial.lisp  fibonacci.lisp  fizzbuzz.lisp  function_nested.lisp  function_simple.lisp  hello.lisp  loop_for_do.lisp  loop_simple.lisp  variables.lisp
loitar/src/core/: CMakeLists.txt
loitar/src/core/src/: array_node.cpp  atom_node.cpp  environment.cpp  evaluator.cpp  integer_node.cpp  list_node.cpp  nil_node.cpp  node.cpp  parser.cpp  repl.cpp  string_node.cpp  syslib.cpp  true_node.cpp
loitar/src/shell/: CMakeLists.txt
loitar/src/shell/src/: main.cpp
loitar/tests/: CMakeLists.txt  array_tests.cpp  environment_tests.cpp  evaluator_tests.cpp  node_tests.cpp  parser_tests.cpp  testlib.cpp
loitar/tests/syslib/: aref_tests.cpp  flow_control_tests.cpp  lists_tests.cpp  math_ops_tests.cpp  predicates_tests.cpp  special_ops_tests.cpp
rasgl/: .gitignore  CMakeLists.txt  README.md  RESEARCH.md  TODO.md  build_deps.sh  build_deps_dos.sh  build_docker_psx.sh  build_posix.sh  build_psx.sh  psx.cmake  run_cli.sh  run_dos.sh  run_posix.sh  run_psx.sh  run_tests.sh  run_tmux.sh
rasgl/assets/maps/: map01.mtl
rasgl/assets/models/: cube.mtl
rasgl/assets/scenes/: cube.lsp  gmap01.lsp  map01.lsp  multi01.lsp  ortho.lsp  scene01.lsp  tmap01.lsp  tri.lsp
rasgl/cmake/: FindLarse.cmake
rasgl/cmake-psx/: executable.ld  setup.cmake  tools.cmake
rasgl/config/: posix.lsp  settings.lsp
rasgl/research/: ortho.md  psx-gte.md  psx.md  psx_generate_csv.sh  psx_list_objects.sh  psx_prefix_summary.py  psx_prefix_summary.sh
rasgl/settings/: app.lsp  posix.lsp
rasgl/src/: CMakeLists.txt  main.c
rasgl/src/core/: CMakeLists.txt  app.c  camera.c  clip.c  console.c  debug.c  event.c  frustum.c  graphics.c  grid.c  input.c  line_buffer.c  maths.c  maths_tables.c  matrix.c  matrix_projection.c  model.c  normals.c  pipeline.c  plane.c  rasterize.c  repr.c  sc_animation.c  sc_gridmap.c  sc_load.c  sc_scene.c  sc_tombmap.c  sc_tombmap_data.c  sc_tombmap_load.c  scene.c  sg_gridmap.c  sg_setup.c  sg_tombmap.c  string.c  text.c
rasgl/src/demo/: CMakeLists.txt  demo_main.c
rasgl/src/demo/map/: demo_main.c
rasgl/src/demo/mini/: demo_main.c
rasgl/src/demo/poly/: CMakeLists.txt  demo_main.c
rasgl/src/demo/world/: demo_main.c
rasgl/src/hosted/: CMakeLists.txt  event_log.c  log_impl.c  model_load.c  sc_gridmap_load.c  sc_load.c  sc_tombmap_load.c  settings_load.c  string.c
rasgl/src/pack/: CMakeLists.txt  camera_decode.c  camera_encode.c  common.c  element_decode.c  element_encode.c  face_decode.c  face_encode.c  model_decode.c  model_encode.c  object_decode.c  object_encode.c  scene_decode.c  scene_encode.c  tombmap_decode.c  tombmap_encode.c
rasgl/src/platform/: CMakeLists.txt
rasgl/src/platform/dos/: CMakeLists.txt  main.c  timer.c  timer.h
rasgl/src/platform/posix/: CMakeLists.txt  main.c  rasterize.c  rasterize.h  settings.c  settings.h
rasgl/src/platform/psx/: controller.c  data.txt  (+13 more)
rasgl/src/raslib/: CMakeLists.txt  app.h
rasgl/src/shell/: CMakeLists.txt
rasgl/tests/: CMakeLists.txt  backface_tests.c  gridmap_tests.c  main.c  maths_tests.c  pack_tests.c  pipeline_tests.c  tests.h  tombmap_tests.c
rasgl/tests/data/: camera_proj.lsp  camera_proj_bad.lsp  clip_a.lsp  clip_b.lsp  scene01.lsp  scene02.lsp
rasgl/tools/: djgpp.cmake  dosbox-template.conf  dosbox.conf  gen_dosbox.sh
rasgl/tools/psx/: Dockerfile
rexile/: .editorconfig  CMakeLists.txt  README.md  TODO.md  run_attach.sh  run_tests.sh
rexile/src/: CMakeLists.txt  board.c  board.h  deck.c  deck.h  game.c  game.h  main.c  ux_draw.c  ux_draw.h  ux_input.c  ux_input.h
rexile/src/core/: CMakeLists.txt
rexile/src/shell/: CMakeLists.txt
rexile/tests/: CMakeLists.txt  main.c  test_support.c  test_support.h
rexile/tests/data/: small_deck.txt
samples/cmake_mono/app_b/: CMakeLists.txt  run_build.sh  run_dos.sh
samples/cmake_mono/lib_a/: CMakeLists.txt  run_build.sh
samples/cmake_mono_export/app_b/: .gitignore  CMakeLists.txt  run_build.sh
samples/cmake_mono_export/lib_a/: CMakeLists.txt  run_build.sh
samples/cmake_ncurses/: CMakeLists.txt  README.md  run_build.sh
samples/cmake_ncurses/src/: main.c
samples/lparse/: CMakeLists.txt  README.md
samples/lparse/src/: main.c
samples/lparse/test/: test1.lisp
samples/ortho_ogl/: .editorconfig  .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
samples/ortho_ogl/src/: main.c
samples/simple_ogl/: CMakeLists.txt  README.md  run.sh
samples/simple_ogl/src/: main.c
samples/spin_world/: CMakeLists.txt  README.md
samples/spin_world/src/: Engine.cpp  Engine.h  Map.cpp  Map.h  Player.h  RaycastRenderer.cpp  RaycastRenderer.h  Vector2.cpp  Vector2.h  main.cpp  map1.txt
samples/xform/: CMakeLists.txt  README.md  run.sh  run_tests.sh
samples/xform/src/: main.c  maths.c  maths.h  maths_tables.c  maths_tables.h  matrix.c  matrix.h  test.c
sand/: .clang-format  .gitignore  CMakeLists.txt  README.md
sand/src/: main.c  test.c
(+263 files in other folders)
