[tool.poetry]
name = "arch-feed"
version = "0.1.0"
description = ""
authors = ["William Jones <github.com/wtjones>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
rfeed = "^1.1.1"
internetarchive = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get_metadata = "arch_feed.main:get_metadata"
generate_feed = "arch_feed.main:generate_feed"
