if (DEFINED RAS_DEMO)
    if (${RAS_DEMO} STREQUAL "world")
        add_subdirectory(world)
    elseif (${RAS_DEMO} STREQUAL "poly")
        add_subdirectory(poly)
    elseif (${RAS_DEMO} STREQUAL "map")
        add_subdirectory(map)
    elseif (${RAS_DEMO} STREQUAL "mini")
        add_subdirectory(mini)
    endif()
endif()
